@@ -1,3 +1,8 @@
+2007-07-16  Aaron Stone  <aaron@serendipity.cx>
+
+	* export.c, man/dbmail-export.txt:
+	Require the -u argument, add support for wildcards.
+
 2007-07-15  Paul J Stevens <paul@nfg.nl>
 
 	* modules/authldap.c:
